--- a/arch/x86_64/root/limine.cfg
+++ b/arch/x86_64/root/limine.cfg
@@ -1,6 +1,20 @@
 TIMEOUT=3
 
-:Leaf (x86_64)
+${WP_PATH}=boot:///bg.jpg
+
+INTERFACE_BRANDING="Limine - Leaf ${ARCH}"
+
+TERM_MARGIN=75
+
+# 0-7, black, red, green, brown, blue, magenta, cyan, gray
+INTERFACE_BRANDING_COLOUR=3
+
+TERM_WALLPAPER=${WP_PATH}
+
+# RRGGBB
+TERM_BACKDROP=010101
+
+:Leaf (${ARCH})
     PROTOCOL=limine
     KASLR=no
     KERNEL_PATH=boot:///boot/leaf
