feat: Updated limine.cfg

--- a/arch/x86_64/root/limine.cfg
+++ b/arch/x86_64/root/limine.cfg
@@ -1,19 +1,14 @@
-TIMEOUT=3
+TIMEOUT=5
 
+GRAPHICS=yes
+
+# Branding
 ${WP_PATH}=boot:///bg.jpg
-
-INTERFACE_BRANDING="Limine - Leaf ${ARCH}"
-
-TERM_MARGIN=75
-
-# 0-7, black, red, green, brown, blue, magenta, cyan, gray
-INTERFACE_BRANDING_COLOUR=3
-
+INTERFACE_BRANDING=Limine - Leaf ${ARCH}
+TERM_MARGIN=85
 TERM_WALLPAPER=${WP_PATH}
 
-# RRGGBB
-TERM_BACKDROP=010101
-
+# Targtets
 :Leaf (${ARCH})
     PROTOCOL=limine
     KASLR=no
